...
    <string name="content_description_delete_selected_notes">Delete selected notes.</string>
    <string name="add_to_folder_button">Add to folder</string>
    <string name="delete_note_button">Delete note</string>
    <string name="content_description_select_notes_navigation">Close select notes toolbar</string>
    <string name="all_notes">All notes</string>
    <string name="my_folders">My folders</string>
    <string name="my_folder_1">My folder 1</string>
    <string name="my_folder_2">My folder 2</string>
    <string name="my_folder_3">My folder 3</string>
    <string name="my_folder_4">My folder 4</string>
    <string name="add_or_manage_folders">Add or manage folders</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
...
    <string name="delete_note_button_edit_note">Delete note</string>
    <string name="tooltip_add_new_note">Add new note.</string>
    <string name="page_title_add_or_manage_folders">Manage folders</string>
    <string name="content_description_manage_folders_navigation">Go back.</string>
    <string name="content_description_add_new_folder_button">Add new folder.</string>
    <string name="name_new_folder_edittext_hint">Name new folder.</string>
    <string name="content_description_name_new_folder_clear_button">Clear name new folder edittext text.</string>
    <string name="content_description_reject_new_folder_button">Reject adding new folder.</string>
    <string name="content_description_accept_new_folder_button">Accept and add new folder.</string>
    <string name="content_description_manage_folders_delete_folder">Delete folder.</string>
    <string name="folder_name_hint_manage_folders">Folder name.</string>
    <string name="content_description_manage_folders_cancel_renaming_folder">Cancel renaming folder.</string>
    <string name="content_description_manage_folders_folder_list">Folder list.</string>
...
